tests/src/frontend/syntax/invalid/under_ident_1.sk
class Foo<T> {
  fun _(): void { void }
}
